# adversarial-patch-vlm

./: .gitignore  CLAUDE.md  README.md  advanced_vlm_evaluation.ipynb  adversarial_vlm_eval.ipynb  eval_utility.py  idefics2_8b_results.xlsx  model_factory.py  patch_utility.py  playground.ipynb  pyproject.toml  typographic_attack_vlm_large.ipynb
data/: .gitignore
results/: blip2_flan_t5_xl_results.xlsx  blip2_opt_2.7b_results.xlsx  instructblip_flan_t5_xl_results.xlsx  instructblip_vicuna_7b_results.xlsx  kosmos2_results.xlsx  llava_1.5_13b_results.xlsx  llava_1.5_7b_results.xlsx  llava_next_mistral_7b_results.xlsx  llava_next_vicuna_13b_results.xlsx  master_comparison.xlsx  qwen2_vl_7b_results.xlsx
