[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.34.0",
    "bitsandbytes>=0.43.0",
    "datasets>=2.20.0",
    "einops>=0.8.2",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pillow>=12.2.0",
    "protobuf>=7.34.1",
    "qwen-vl-utils>=0.0.14",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "timm>=1.0.26",
    "torch",             # Let UV pick the version from the source below
    "torchvision",       # Let UV pick the version from the source below
    "transformers>=4.46.0",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
